--- a/News_Classification_Model/My_Model.ipynb
+++ b/News_Classification_Model/My_Model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 25,
    "id": "664dd786-7445-4230-9377-16c1970ea9cd",
    "metadata": {
     "tags": []
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 26,
    "id": "d6e8bbeb-4bb0-4b61-be9e-075be97dd189",
    "metadata": {
     "tags": []
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 27,
    "id": "31ee8c60-7742-4c92-b87c-51547d86489c",
    "metadata": {
     "tags": []
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 28,
    "id": "7b10f4e9-dd3a-4f8d-8fd3-52773e274fec",
    "metadata": {
     "tags": []
@@ -200,7 +200,7 @@
        "[2134 rows x 2 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 29,
    "id": "b349647f-6573-4425-9431-5ee3dd1eb43a",
    "metadata": {
     "tags": []
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 30,
    "id": "a5acb3cb-e5a7-44a7-b7e2-15c9a4e1a1b9",
    "metadata": {
     "tags": []
@@ -353,7 +353,7 @@
        "world           122"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 31,
    "id": "e0b8e2ce-6901-42e2-8ff2-2026c6a2178f",
    "metadata": {
     "tags": []
@@ -386,7 +386,7 @@
        "<Axes: xlabel='category'>"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 32,
    "id": "2c021b54-6c35-44fa-9e4c-299d02b170b7",
    "metadata": {
     "tags": []
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 33,
    "id": "317fa32d-cdb1-41fe-b706-2b2b7181edaf",
    "metadata": {
     "tags": []
@@ -454,7 +454,7 @@
        "[':', '?', '|', '!', '.', ',', '\" \"', \"''\", '( )', '—', '-', \"?'\", '\\\\n']"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 34,
    "id": "d7c377f2-8c02-4d3d-9894-b9ac7054ebd6",
    "metadata": {
     "tags": []
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 35,
    "id": "f322920f-197f-4d31-aa53-b23261c75bf0",
    "metadata": {
     "tags": []
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 36,
    "id": "c381c59d-a708-483d-b570-4b30c2481dea",
    "metadata": {
     "tags": []
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 37,
    "id": "37fc6901-3522-4e50-be4d-c44cb6c8196e",
    "metadata": {
     "tags": []
@@ -608,66 +608,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  (0, 7344)\t1\n",
-      "  (0, 7388)\t1\n",
-      "  (0, 7759)\t2\n",
-      "  (0, 7782)\t2\n",
-      "  (0, 19831)\t2\n",
-      "  (0, 19907)\t1\n",
-      "  (0, 19985)\t1\n",
-      "  (0, 24643)\t1\n",
-      "  (0, 24649)\t1\n",
-      "  (0, 30069)\t1\n",
-      "  (0, 30088)\t1\n",
-      "  (0, 31382)\t2\n",
-      "  (0, 32557)\t2\n",
-      "  (0, 33283)\t1\n",
-      "  (0, 33302)\t1\n",
-      "  (0, 35861)\t1\n",
-      "  (0, 35879)\t1\n",
-      "  (0, 42467)\t1\n",
-      "  (0, 42507)\t1\n",
-      "  (0, 42571)\t1\n",
-      "  (0, 42650)\t1\n",
-      "  (0, 50325)\t1\n",
-      "  (0, 50330)\t1\n",
-      "  (0, 53726)\t1\n",
-      "  (0, 53727)\t1\n",
+      "  (0, 6436)\t1\n",
+      "  (0, 6498)\t1\n",
+      "  (0, 6919)\t1\n",
+      "  (0, 6930)\t1\n",
+      "  (0, 16716)\t1\n",
+      "  (0, 16842)\t1\n",
+      "  (0, 20705)\t1\n",
+      "  (0, 20831)\t1\n",
+      "  (0, 25056)\t1\n",
+      "  (0, 25084)\t1\n",
+      "  (0, 27302)\t1\n",
+      "  (0, 27324)\t1\n",
+      "  (0, 29295)\t1\n",
+      "  (0, 29348)\t1\n",
+      "  (0, 34548)\t1\n",
+      "  (0, 34589)\t1\n",
+      "  (0, 40244)\t1\n",
+      "  (0, 40251)\t1\n",
+      "  (0, 43148)\t1\n",
+      "  (0, 43149)\t1\n",
+      "  (0, 52415)\t1\n",
+      "  (0, 52565)\t1\n",
+      "  (0, 57032)\t1\n",
+      "  (0, 61556)\t1\n",
+      "  (0, 61838)\t1\n",
       "  :\t:\n",
-      "  (1706, 111488)\t2\n",
-      "  (1706, 111494)\t1\n",
-      "  (1706, 111742)\t1\n",
-      "  (1706, 111787)\t1\n",
-      "  (1706, 112004)\t1\n",
-      "  (1706, 112072)\t1\n",
-      "  (1706, 112718)\t1\n",
-      "  (1706, 112926)\t1\n",
-      "  (1706, 113415)\t1\n",
-      "  (1706, 113518)\t1\n",
-      "  (1706, 113762)\t2\n",
-      "  (1706, 113830)\t1\n",
-      "  (1706, 113862)\t1\n",
-      "  (1706, 115263)\t1\n",
-      "  (1706, 115363)\t1\n",
-      "  (1706, 116101)\t1\n",
-      "  (1706, 116178)\t1\n",
-      "  (1706, 117114)\t1\n",
-      "  (1706, 117115)\t1\n",
-      "  (1706, 118733)\t1\n",
-      "  (1706, 118747)\t1\n",
-      "  (1706, 120540)\t1\n",
-      "  (1706, 120562)\t1\n",
-      "  (1706, 120751)\t1\n",
-      "  (1706, 120759)\t1\n"
+      "  (1706, 87878)\t1\n",
+      "  (1706, 88126)\t1\n",
+      "  (1706, 88147)\t4\n",
+      "  (1706, 88226)\t1\n",
+      "  (1706, 88330)\t1\n",
+      "  (1706, 88342)\t2\n",
+      "  (1706, 88642)\t2\n",
+      "  (1706, 88646)\t1\n",
+      "  (1706, 88837)\t1\n",
+      "  (1706, 89052)\t2\n",
+      "  (1706, 89055)\t1\n",
+      "  (1706, 89065)\t1\n",
+      "  (1706, 89128)\t1\n",
+      "  (1706, 89217)\t1\n",
+      "  (1706, 89282)\t1\n",
+      "  (1706, 89289)\t1\n",
+      "  (1706, 89617)\t3\n",
+      "  (1706, 89731)\t1\n",
+      "  (1706, 89733)\t2\n",
+      "  (1706, 89965)\t1\n",
+      "  (1706, 90017)\t1\n",
+      "  (1706, 90281)\t1\n",
+      "  (1706, 90385)\t1\n",
+      "  (1706, 90841)\t1\n",
+      "  (1706, 91120)\t1\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(1707, 120783)"
+       "(1707, 92201)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,6 +676,10 @@
     "data = pd.DataFrame()\n",
     "\n",
     "data[\"text\"]=ndf.text\n",
+    "# Preprocess the text data\n",
+    "data[\"text\"] = preprocess_text(data[\"text\"], stop_words, punctuation_words)\n",
+    "\n",
+    "\n",
     "# data[\"category\"]=ndf.category\n",
     "\n",
     "data[\"label\"]=ndf.category\n",
@@ -694,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 38,
    "id": "b48ecd21-ddb9-4c4a-bc4c-37808776b333",
    "metadata": {
     "tags": []
@@ -703,10 +707,10 @@
     {
      "data": {
       "text/plain": [
-       "(1707, 120783)"
+       "(1707, 92201)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 39,
    "id": "96b51bda-703d-4aa7-a98f-dd1535b2b97d",
    "metadata": {
     "tags": []
@@ -793,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 40,
    "id": "d4a6dc18-74ea-4d04-9f95-a65a5ddaa5ec",
    "metadata": {
     "tags": []
@@ -802,10 +806,10 @@
     {
      "data": {
       "text/plain": [
-       "0.9994141769185706"
+       "0.9976567076742824"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 47,
    "id": "13b440a4-5a80-4d5f-b57f-88aca1a3ba99",
    "metadata": {
     "tags": []
@@ -847,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 48,
    "id": "4480d9b7-458e-405a-bbf0-c334a030144b",
    "metadata": {
     "tags": []
@@ -859,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 49,
    "id": "2e3101e4-5c3c-4495-a02f-8ea54ac90c79",
    "metadata": {
     "tags": []
@@ -879,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 50,
    "id": "d13b5b1b-c165-4b41-9f6e-c698c5564e7f",
    "metadata": {
     "tags": []
@@ -889,9 +893,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PRECISION_SCORE : 0.8424000031218217\n",
+      "PRECISION_SCORE : 0.8354540206881994\n",
       "RECALL_SCORE : 0.8220140515222483\n",
-      "F1_SCORE : 0.8173573660501388\n"
+      "F1_SCORE : 0.8188335629763971\n"
      ]
     }
    ],
@@ -914,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 51,
    "id": "bff5353a-4eee-45bc-9fe7-135a18c31fe8",
    "metadata": {
     "tags": []
@@ -923,22 +927,22 @@
     {
      "data": {
       "text/plain": [
-       "array([[12,  0,  0,  1,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
-       "       [ 0, 14,  1,  3,  0,  0,  0,  0,  2,  0,  0,  1,  0],\n",
-       "       [ 0,  2, 74,  1,  2,  0,  0,  0,  0,  0,  0,  0,  1],\n",
-       "       [ 0,  0,  0, 21,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
-       "       [ 1,  1,  6,  4,  5,  0,  0,  0,  1,  0,  0,  1,  0],\n",
-       "       [ 1,  0,  3,  2,  0, 10,  0,  0,  3,  0,  0,  1,  0],\n",
-       "       [ 1,  0,  2,  1,  0,  0, 12,  0,  1,  0,  0,  2,  2],\n",
-       "       [ 0,  0,  2,  0,  0,  0,  0, 19,  1,  0,  0,  1,  0],\n",
-       "       [ 0,  0,  1,  2,  0,  0,  0,  0, 35,  0,  0,  0,  0],\n",
-       "       [ 0,  0,  3,  0,  0,  2,  0,  0,  0, 52,  0,  4,  2],\n",
+       "array([[11,  0,  0,  0,  1,  0,  0,  0,  0,  0,  0,  1,  0],\n",
+       "       [ 0, 14,  0,  3,  0,  0,  0,  0,  1,  0,  0,  3,  0],\n",
+       "       [ 0,  2, 73,  1,  1,  0,  0,  0,  0,  0,  1,  0,  2],\n",
+       "       [ 0,  0,  2, 19,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
+       "       [ 2,  2,  5,  2,  5,  0,  0,  0,  1,  0,  0,  2,  0],\n",
+       "       [ 0,  0,  2,  2,  1, 12,  0,  0,  2,  0,  0,  0,  1],\n",
+       "       [ 1,  0,  1,  2,  1,  0, 12,  0,  1,  0,  0,  2,  1],\n",
+       "       [ 0,  0,  0,  0,  0,  0,  0, 18,  4,  0,  0,  0,  1],\n",
+       "       [ 0,  0,  1,  1,  0,  0,  0,  0, 36,  0,  0,  0,  0],\n",
+       "       [ 0,  1,  2,  1,  0,  1,  0,  0,  1, 55,  0,  0,  2],\n",
        "       [ 0,  0,  1,  1,  0,  0,  0,  0,  0,  0, 53,  0,  0],\n",
-       "       [ 0,  0,  0,  1,  1,  2,  0,  0,  0,  0,  0, 28,  0],\n",
-       "       [ 0,  0,  2,  3,  0,  0,  0,  0,  0,  0,  0,  0, 16]], dtype=int64)"
+       "       [ 1,  0,  0,  0,  2,  1,  0,  0,  0,  0,  0, 28,  0],\n",
+       "       [ 1,  0,  1,  3,  0,  1,  0,  0,  0,  0,  0,  0, 15]], dtype=int64)"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -957,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 52,
    "id": "de9d7947-5283-43d4-81a9-b104b0704b4b",
    "metadata": {
     "tags": []
@@ -982,7 +986,7 @@
        "  'world': 12})"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1001,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 53,
    "id": "54c767c7-1c6f-41b5-ba4d-0283effb4482",
    "metadata": {
     "tags": []
@@ -1013,7 +1017,7 @@
        "['politic']"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1042,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 54,
    "id": "8d5737b2-07ef-4d49-aba4-2e238a2dfa29",
    "metadata": {
     "tags": []
@@ -1054,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 55,
    "id": "d90612a0-30e5-41b4-b292-d7022dc3185b",
    "metadata": {
     "tags": []
@@ -1067,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 56,
    "id": "f2a5f8fd-4bc3-4941-a58e-d0634c961ed3",
    "metadata": {
     "tags": []
@@ -1088,8 +1092,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "4c0b7eeb-f74f-4cc6-b5a1-bf1126497668",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting snowballstemmer\n",
+      "  Downloading snowballstemmer-2.2.0-py2.py3-none-any.whl (93 kB)\n",
+      "                                              0.0/93.0 kB ? eta -:--:--\n",
+      "     -------------                            30.7/93.0 kB 1.3 MB/s eta 0:00:01\n",
+      "     -------------------------              61.4/93.0 kB 656.4 kB/s eta 0:00:01\n",
+      "     -------------------------------------- 93.0/93.0 kB 880.4 kB/s eta 0:00:00\n",
+      "Installing collected packages: snowballstemmer\n",
+      "Successfully installed snowballstemmer-2.2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# !pip install snowballstemmer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac99078f",
    "metadata": {},
    "outputs": [],
    "source": []
