--- a/News_Classification_Model/My_Model.ipynb
+++ b/News_Classification_Model/My_Model.ipynb
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "d7c377f2-8c02-4d3d-9894-b9ac7054ebd6",
    "metadata": {
     "tags": []
@@ -537,15 +537,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "1606dfda-0310-46e4-8c1a-fb4f44ad801d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ndf = df.copy()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "f322920f-197f-4d31-aa53-b23261c75bf0",
    "metadata": {
     "tags": []
@@ -563,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "c381c59d-a708-483d-b570-4b30c2481dea",
    "metadata": {
     "tags": []
@@ -590,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "37fc6901-3522-4e50-be4d-c44cb6c8196e",
    "metadata": {
     "tags": []
@@ -659,7 +661,7 @@
        "(1707, 92201)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "id": "b48ecd21-ddb9-4c4a-bc4c-37808776b333",
    "metadata": {
     "tags": []
@@ -702,7 +704,7 @@
        "(1707, 92201)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "id": "96b51bda-703d-4aa7-a98f-dd1535b2b97d",
    "metadata": {
     "tags": []
@@ -789,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "id": "d4a6dc18-74ea-4d04-9f95-a65a5ddaa5ec",
    "metadata": {
     "tags": []
@@ -801,7 +803,7 @@
        "0.9976567076742824"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "id": "13b440a4-5a80-4d5f-b57f-88aca1a3ba99",
    "metadata": {
     "tags": []
@@ -843,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "id": "4480d9b7-458e-405a-bbf0-c334a030144b",
    "metadata": {
     "tags": []
@@ -855,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "id": "2e3101e4-5c3c-4495-a02f-8ea54ac90c79",
    "metadata": {
     "tags": []
@@ -875,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "id": "d13b5b1b-c165-4b41-9f6e-c698c5564e7f",
    "metadata": {
     "tags": []
@@ -910,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "id": "bff5353a-4eee-45bc-9fe7-135a18c31fe8",
    "metadata": {
     "tags": []
@@ -934,7 +936,7 @@
        "       [ 1,  0,  1,  3,  0,  1,  0,  0,  0,  0,  0,  0, 15]], dtype=int64)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -953,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "id": "de9d7947-5283-43d4-81a9-b104b0704b4b",
    "metadata": {
     "tags": []
@@ -978,7 +980,7 @@
        "  'world': 12})"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -997,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "id": "54c767c7-1c6f-41b5-ba4d-0283effb4482",
    "metadata": {
     "tags": []
@@ -1009,7 +1011,7 @@
        "['politic']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
