--- a/News_Classification_Model/My_Model.ipynb
+++ b/News_Classification_Model/My_Model.ipynb
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "d7c377f2-8c02-4d3d-9894-b9ac7054ebd6",
    "metadata": {
     "tags": []
@@ -537,9 +537,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "1606dfda-0310-46e4-8c1a-fb4f44ad801d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "ndf = df.copy()"
@@ -565,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "c381c59d-a708-483d-b570-4b30c2481dea",
    "metadata": {
     "tags": []
@@ -574,7 +576,7 @@
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.model_selection import train_test_split\n",
-    "# from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.utils.multiclass import unique_labels\n",
     "from sklearn.metrics import precision_score, recall_score, f1_score\n",
     "from sklearn.metrics import confusion_matrix\n",
@@ -592,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "37fc6901-3522-4e50-be4d-c44cb6c8196e",
    "metadata": {
     "tags": []
@@ -661,7 +663,7 @@
        "(1707, 92201)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "b48ecd21-ddb9-4c4a-bc4c-37808776b333",
    "metadata": {
     "tags": []
@@ -704,7 +706,7 @@
        "(1707, 92201)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,77 +723,77 @@
    "metadata": {},
    "source": [
     "# Model Fitting \n",
-    "### We fit MultinomialNB by using Train set of data. We get value of coefficent of determination 99.86% that means the model is able to fit only 99.86% of data."
+    "### We fit MultinomialNB by using Train set of data. We get value of coefficent of determination 99.76% that means the model is able to fit only 99.76% of data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "96b51bda-703d-4aa7-a98f-dd1535b2b97d",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from scipy.sparse import csr_matrix\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "# import numpy as np\n",
+    "# from scipy.sparse import csr_matrix\n",
+    "# from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
-    "class Multinomial:\n",
-    "    def __init__(self, alpha=1.0):\n",
-    "        self.alpha = alpha\n",
-    "        self.vectorizer = None\n",
+    "# class Multinomial:\n",
+    "#     def __init__(self, alpha=1.0):\n",
+    "#         self.alpha = alpha\n",
+    "#         self.vectorizer = None\n",
     "        \n",
     "    \n",
-    "    def fit(self, X, y):\n",
-    "        # Convert text to word count matrix\n",
-    "        X_sparse = X\n",
+    "#     def fit(self, X, y):\n",
+    "#         # Convert text to word count matrix\n",
+    "#         X_sparse = X\n",
     "        \n",
-    "        # Get unique class labels and their counts\n",
-    "        self.classes, class_counts = np.unique(y, return_counts=True)\n",
-    "        n_classes = len(self.classes)\n",
+    "#         # Get unique class labels and their counts\n",
+    "#         self.classes, class_counts = np.unique(y, return_counts=True)\n",
+    "#         n_classes = len(self.classes)\n",
     "        \n",
-    "        # Calculate class prior probabilities\n",
-    "        self.class_prior = class_counts / np.sum(class_counts)\n",
+    "#         # Calculate class prior probabilities\n",
+    "#         self.class_prior = class_counts / np.sum(class_counts)\n",
     "        \n",
-    "        # Calculate count of each feature per class and add smoothing\n",
-    "        feature_count = np.zeros((n_classes, X_sparse.shape[1]))\n",
-    "        for i in range(n_classes):\n",
-    "            Xi = X_sparse[y == self.classes[i]]\n",
-    "            feature_count[i, :] = np.array(Xi.sum(axis=0)).flatten() + self.alpha\n",
+    "#         # Calculate count of each feature per class and add smoothing\n",
+    "#         feature_count = np.zeros((n_classes, X_sparse.shape[1]))\n",
+    "#         for i in range(n_classes):\n",
+    "#             Xi = X_sparse[y == self.classes[i]]\n",
+    "#             feature_count[i, :] = np.array(Xi.sum(axis=0)).flatten() + self.alpha\n",
     "        \n",
-    "        # Calculate count of each class\n",
-    "        class_count = feature_count.sum(axis=1)\n",
+    "#         # Calculate count of each class\n",
+    "#         class_count = feature_count.sum(axis=1)\n",
     "        \n",
-    "        # Calculate log probability of each feature for each class\n",
-    "        self.feature_log_prob = (np.log(feature_count) - np.log(class_count.reshape(-1, 1)))\n",
+    "#         # Calculate log probability of each feature for each class\n",
+    "#         self.feature_log_prob = (np.log(feature_count) - np.log(class_count.reshape(-1, 1)))\n",
     "        \n",
-    "        return self\n",
+    "#         return self\n",
     "    \n",
-    "    def _log_prob(self, X):\n",
-    "        # Calculate log probability of each class for each sample\n",
-    "        return X @ self.feature_log_prob.T + np.log(self.class_prior)\n",
+    "#     def _log_prob(self, X):\n",
+    "#         # Calculate log probability of each class for each sample\n",
+    "#         return X @ self.feature_log_prob.T + np.log(self.class_prior)\n",
     "    \n",
-    "    def predict(self, X):\n",
-    "        X_sparse = X\n",
+    "#     def predict(self, X):\n",
+    "#         X_sparse = X\n",
     "        \n",
-    "        # Calculate log probability of each class for each sample\n",
-    "        log_prob = self._log_prob(X_sparse)\n",
+    "#         # Calculate log probability of each class for each sample\n",
+    "#         log_prob = self._log_prob(X_sparse)\n",
     "        \n",
-    "        # Find class with highest log probability for each sample\n",
-    "        y_pred = np.argmax(log_prob, axis=1)\n",
+    "#         # Find class with highest log probability for each sample\n",
+    "#         y_pred = np.argmax(log_prob, axis=1)\n",
     "        \n",
-    "        # Map class index to label\n",
-    "        return self.classes[y_pred]\n",
+    "#         # Map class index to label\n",
+    "#         return self.classes[y_pred]\n",
     "    \n",
-    "    def score(self, X, y):\n",
-    "        y_pred = self.predict(X)\n",
-    "        return np.mean(y_pred == y)  "
+    "#     def score(self, X, y):\n",
+    "#         y_pred = self.predict(X)\n",
+    "#         return np.mean(y_pred == y)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "d4a6dc18-74ea-4d04-9f95-a65a5ddaa5ec",
    "metadata": {
     "tags": []
@@ -803,13 +805,13 @@
        "0.9976567076742824"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model = Multinomial(alpha=0.1)\n",
+    "model = MultinomialNB(alpha=0.1)\n",
     "model.fit(X_train_vectorized, Y_train)\n",
     "model.score(X_train_vectorized, Y_train)"
    ]
@@ -824,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "13b440a4-5a80-4d5f-b57f-88aca1a3ba99",
    "metadata": {
     "tags": []
@@ -845,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "id": "4480d9b7-458e-405a-bbf0-c334a030144b",
    "metadata": {
     "tags": []
@@ -857,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "id": "2e3101e4-5c3c-4495-a02f-8ea54ac90c79",
    "metadata": {
     "tags": []
@@ -877,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "id": "d13b5b1b-c165-4b41-9f6e-c698c5564e7f",
    "metadata": {
     "tags": []
@@ -912,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "id": "bff5353a-4eee-45bc-9fe7-135a18c31fe8",
    "metadata": {
     "tags": []
@@ -936,7 +938,7 @@
        "       [ 1,  0,  1,  3,  0,  1,  0,  0,  0,  0,  0,  0, 15]], dtype=int64)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "id": "de9d7947-5283-43d4-81a9-b104b0704b4b",
    "metadata": {
     "tags": []
@@ -980,13 +982,13 @@
        "  'world': 12})"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.classes, classes"
+    "model.classes_, classes"
    ]
   },
   {
@@ -999,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "id": "54c767c7-1c6f-41b5-ba4d-0283effb4482",
    "metadata": {
     "tags": []
@@ -1011,7 +1013,7 @@
        "['politic']"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1034,13 +1036,17 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "269006f5-7dd1-40eb-a502-7a3ee0b1f8fe",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 27,
    "id": "8d5737b2-07ef-4d49-aba4-2e238a2dfa29",
    "metadata": {
     "tags": []
@@ -1052,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 28,
    "id": "d90612a0-30e5-41b4-b292-d7022dc3185b",
    "metadata": {
     "tags": []
@@ -1065,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 29,
    "id": "f2a5f8fd-4bc3-4941-a58e-d0634c961ed3",
    "metadata": {
     "tags": []
@@ -1086,9 +1092,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "4c0b7eeb-f74f-4cc6-b5a1-bf1126497668",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# !pip install snowballstemmer"
@@ -1098,6 +1106,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ac99078f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "618b9382-5250-40a2-85b7-c9906a47db45",
    "metadata": {},
    "outputs": [],
    "source": []
